@@ -3,8 +3,9 @@
 
 TO RELEASE IMMEDIATELY:
  - add your changes -
+stefan; 6 feb 2004: bug 430 fixed (floating point type needed) 
 stefan; 6 feb 2004: bug 673 fixed (delete API call generates broken SQL) 
-stefan; 4 feb 2004: bug 639 fixed (MDD names in Catalog are limited in length) 
+stefan; 4 feb 2004: bug 639 semi fixed (MDD names in Catalog are longer, but still limited in length) 
 stefan; 1 feb 2004: bug 672 fixed (made !include mechanism in MDD insensitive to whitespace)
 
 NOT TO BE RELEASED YET:
